--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -1,18 +1,20 @@
 .search-box__form {
     display: flex;
+    box-sizing: border-box;
 }
 
 .search-box__form-label {
     display: inline-block;
     font-size: 12px;
     margin-right: 10px;
+    width: 100%;
 }
 
 .search-box__form-input {
     box-sizing: border-box;
     display: block;
     margin-top: 5px;
-    width: 300px;
+    width: 100%;
     font-size: 14px;
     padding: 5px 10px;
     border: 1px solid rgba(0, 8, 7, .5);
@@ -38,4 +40,10 @@
 .search-box__form-submit:disabled {
     opacity: 0.5;
     cursor: not-allowed;
+}
+
+@media only screen and (max-width: 300px) {
+    .search-box__form {
+        flex-direction: column;
+    }
 }
